# talkdoc_core

./: .env.example  .gitignore  Chat.py  Dockerfile  README.md  advanced_controls.py  authentication.py  form_mapping.json  pyproject.toml  update_pdf_form.ipynb
.github/workflows/: docker-publish.yml
.streamlit/: config.toml
form_templates/: Antrag_auf_EinbürgerungV3.json  Buergergeld_Antrag.json  Buergergeld_Antrag_v3.json  afa_v1.json  afa_v2.json  afa_v3.json  anlage_vm.json  ek_anlage_v1.json  ek_anlage_v2.json
scripts/: extarct_form.py  extract_form.py  filter_json.py
talkdoc_core/: agents.py  doc_sign.py  gptservice.py  pdf_ops.py  prompts.py  scan_transforms.py  scanner.py
tests/: test_extarct_pdf.py  test_fill_pdf.py
