[tool.poetry]
name = "talkdoc_core"
version = "0.1.0"
description = ""
authors = ["dkr <deepukreddy123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
pypdf = "^4.2.0"
openai = "^1.23.6"
python-dotenv = "^1.0.1"
streamlit = "^1.33.0"
streamlit-chat = "^0.1.1"
ipykernel = "^6.29.4"
streamlit-pdf-viewer = "^0.0.11"
streamlit-mic-recorder = "^0.0.8"
pypdftk = "^0.5"
rich = "^13.9.4"
pymupdf = "^1.25.1"
streamlit-authenticator = "^0.4.1"
agno = "^1.1.2"
duckduckgo-search = "^7.3.2"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
scipy = "^1.12.0"
matplotlib = "^3.8.3"
pylsd-nova = "^1.2.1"
streamlit-drawable-canvas = "^0.9.3"
docusign-esign = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
