[project]
name = "talkdoc-core"
version = "0.1.0"
description = ""
authors = [{ name = "dkr", email = "deepukreddy123@gmail.com" }]
requires-python = ">=3.10, <3.13"
readme = "README.md"
dependencies = [
    "openai>=1.23.6,<2",
    "python-dotenv>=1.0.1,<2",
    "streamlit>=1.33.0,<2",
    "streamlit-chat>=0.1.1,<0.2",
    "ipykernel>=6.29.4,<7",
    "streamlit-pdf-viewer>=0.0.11,<0.0.12",
    "streamlit-mic-recorder>=0.0.8,<0.0.9",
    "rich>=13.9.4,<14",
    "pymupdf>=1.25.1,<2",
    "streamlit-authenticator>=0.4.1,<0.5",
    "agno>=1.1.2,<2",
    "duckduckgo-search>=7.3.2,<8",
    "pypdf>=6.1.3",
]
